# frvt

11/: .gitignore
11/doc/: version.txt
11/docker/: Dockerfile
11/input/: enroll.txt  match.txt  short_enroll.txt  verif.txt
11/scripts/: count_threads_fatest.sh
11/src/algo/: DnetLandmarksDetector.cpp  DnetLandmarksDetector.h  FaceClassifier.cpp  FaceClassifier.h  FaceDetectionEnsemble.cpp  FaceDetectionEnsemble.h  FaceDetector.h  FaceRecognizer.h  FanLandmarksDetector.cpp  FanLandmarksDetector.h  ImageData.h  ImageNormalizer.cpp  ImageNormalizer.h  InferenceEngine.h  Inverse.cpp  Inverse.h  LandmarksDetector.h  OpenVinoInference.cpp  OpenVinoInference.cpp_  OpenVinoInference.h  Rect.cpp  Rect.h  SfdFaceDetector.cpp  SfdFaceDetector.h  SphereFaceRecognizer.cpp  SphereFaceRecognizer.h  SsdFaceDetector.cpp  SsdFaceDetector.h  TensorFlowInference.cpp  TensorFlowInference.h  TimeMeasurement.cpp  TimeMeasurement.h  c_api.h  tf_utils.cpp  tf_utils.hpp
11/src/fatest/: CMakeLists.txt  ProgressBar.h  SanityTests.h  TestUtils.cpp  TestUtils.h  copy_test_data.py  fatest.cpp  fatest.cpp_
11/src/fatest/test_data/: test_features_similarity.txt
11/src/nullImpl/: CMakeLists.txt  nullimplfrvt11.cpp  nullimplfrvt11.h
